[tool.poetry]
name = "lifetrackerbot"
version = "0.1.0"
description = ""
authors = ["Valery Lazarev <lzrv@feip.co>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pyTelegramBotAPI = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
